--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.4.0",
+    "axios": "^1.7.9",
     "react": "18.3.1",
-    "react-native": "0.76.3"
+    "react-native": "0.76.3",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
